base/spring/dept-spring-envoy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dept-spring-envoy
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: dept-spring-envoy
          servicePort: 80
